--- a/pyda-1.2-hw.ipynb
+++ b/pyda-1.2-hw.ipynb
@@ -301,33 +301,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "введите название компании :market\n",
-      "введите дату :2018-01-01\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-118-e5857a698979>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-118-e5857a698979>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    sum([i[2] for i in stats if (i[0], i[1]) == data ,company ])\u001b[0m\n\u001b[1;37m                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "89"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "company = input(\"введите название компании :\")\n",
     "data = input(\"введите дату :\")\n",
     "\n",
-    "sum([i[2] for i in stats if i[0]==data and i[1]==company])"
+    "sum([i[2] for i in stats if (i[0], i[1]) == data ,company ])"
    ]
   }
  ],
