--- a/pyda-3-hw.ipynb
+++ b/pyda-3-hw.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,16 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "введите команду 1,2,3 : 1\n",
-      "Средняя оценка за ДЗ по группе : 8.43\n",
-      "Средняя оценка за Экзамен по группе : 9.17\n"
+      "введите команду 1,2,3 : 3\n",
+      "Средняя оценка за ДЗ по группе опыт False: 8.8\n",
+      "Средняя оценка за Экзамен по группе опыт False: 9.67\n",
+      "Средняя оценка за ДЗ по группе опыт True: 8.07\n",
+      "Средняя оценка за Экзамен по группе опыт True: 8.67\n"
      ]
     }
    ],
