--- a/mds homework_4.ipynb
+++ b/mds homework_4.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "homework-4.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -57,72 +58,21 @@
         "\n",
         "a) бесконечное количество локальных экстремумов\n",
         "\n",
-        "sin(x)\n",
+        "$sin(x)$\n",
         "\n",
         "b) 2 локальных экстремума\n",
-        "x^3 + 20 x^2\n",
+        "\n",
+        "$x^3 + 20 x^2$\n",
         "\n",
         "\n",
         "с) 3 локальных экстремума\n",
-        "x^4 - x^3 - x^2\n",
+        "\n",
+        "$x^4 - 20x^3 - 5x^2$\n",
+        "\n",
         "d*) область определения функции - 1 точка\n",
+        "\n",
+        "$ y = корень из (-x^2)  $\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RiQQdhcfnvAj",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "import pylab\n",
-        "\n",
-        "from scipy.misc import derivative\n",
-        "from scipy.misc import electrocardiogram\n",
-        "from scipy.optimize import fmin, brute\n",
-        "from scipy.signal import find_peaks"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "25sHA_kDn3CD",
-        "colab_type": "code",
-        "outputId": "5f49efff-bccf-4a30-810c-518237ed07c7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 265
-        }
-      },
-      "source": [
-        "def f(x):\n",
-        "  return pow(x,4) - 100*pow(x,3) -1000* pow(x,2)\n",
-        "\n",
-        "x = np.linspace(-30,15,100)\n",
-        "y = f(x)\n",
-        "plt.plot(x, y)\n",
-        "plt.show()"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZIAAAD4CAYAAADGmmByAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjEsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8QZhcZAAAgAElEQVR4nO3deXyU9bn38c81kxUSAoQQtiBbAEEB\nIQIutXVjcSlabQu1lVqPnvMoPa1dtX3OY0/taa09raf2VC0WKnqqVK0eaKsiRcUNhIAKsghhkyCQ\nsIU16/yeP+aHDjRAQpZ7MvN9v17zysx1L78rd22+3MvctznnEBEROV2hoBsQEZG2TUEiIiJNoiAR\nEZEmUZCIiEiTKEhERKRJUoJuoLV16dLF9enTJ+g2RETalGXLlu1yzuXVNy3pgqRPnz4UFxcH3YaI\nSJtiZltONE2HtkREpEkUJCIi0iQKEhERaRIFiYiINImCREREmkRBIiIiTaIgERGRJlGQNFBJ2QHu\n+etqqmsjQbciIhJXFCQNtHXPEWa8sYnX15cH3YqISFxRkDTQBQO6kJOZyl/e+yjoVkRE4oqCpIHS\nUkJMPKsb81fvpLKmLuh2RETihoKkEa4e3oND1XW8srYs6FZEROJGg4PEzArM7BUzW21mq8zsG77+\nIzPbZmbv+tcVMcvcZWYlZvaBmY2PqU/wtRIzuzOm3tfM3vb1P5lZmq+n+88lfnqfU43REsb2y6VL\nVjp/WaHDWyIiRzVmj6QW+LZzbggwFrjdzIb4afc750b41/MAftpkYCgwAXjQzMJmFgZ+C0wEhgBT\nYtbzc7+uAcBe4GZfvxnY6+v3+/lOOEajt0IDhUPGFWd34+W1ZRysqm2pYURE2pQGB4lzbrtzbrl/\nfwBYA/Q8ySKTgNnOuSrn3CagBBjtXyXOuY3OuWpgNjDJzAy4BHjGLz8LuCZmXbP8+2eAS/38Jxqj\nxVw9vAeVNREWrNnZksOIiLQZp3WOxB9aOgd425emmdkKM5tpZp18rSewNWaxUl87UT0X2Oecqz2u\nfsy6/PQKP/+J1nV8v7eaWbGZFZeXN+3y3VG9O9E9J4O/vLe9SesREUkUjQ4SM8sC/gx80zm3H3gI\n6A+MALYDv2zWDpuBc266c67IOVeUl1fvA74aLBQyrjy7OwvXlVFxuKaZOhQRabsaFSRmlko0RP7o\nnHsWwDm30zlX55yLAI/wyaGlbUBBzOK9fO1E9d1ARzNLOa5+zLr89Bw//4nW1aKuHt6DmjrHi6u0\nVyIi0pirtgyYAaxxzv0qpt49ZrZrgff9+7nAZH/FVV+gEFgCLAUK/RVaaURPls91zjngFeB6v/xU\nYE7Muqb699cDL/v5TzRGixrWK4e+Xdrzv+/o6i0RkcY8s/0C4CvASjN719d+QPSqqxGAAzYD/wzg\nnFtlZk8Bq4le8XW7c64OwMymAfOAMDDTObfKr+/7wGwz+wnwDtHgwv983MxKgD1Ew+ekY7QkM2PS\niB78esF6dlRU0i0no6WHFBGJWxb9h33yKCoqcsXFxU1ez+Zdh/jMf77KD64YzK0X9W+GzkRE4peZ\nLXPOFdU3Td9sP019urRnREFHntPhLRFJcgqSJrhmRA/WbN/Pup0Hgm5FRCQwCpImuGp4D8Ih43/f\nafELxURE4paCpAm6ZKVz4YAuzHn3IyKR5DrXJCJylIKkia45pwfb9h2heMveoFsREQmEgqSJxg3p\nRru0MM8uLw26FRGRQChImqh9egoTz+rO31Zs1wOvRCQpKUiawXUje3KgqpZ5q3YE3YqISKtTkDSD\nsf1y6dkxk2eX6+otEUk+CpJmEAoZ157Tk9fXl7Nzf2XQ7YiItCoFSTP53MieRBz6TomIJB0FSTPp\nl5fFyN4d+fPyUpLt/mUiktwUJM3oulG9WLfzIO9v2x90KyIirUZB0oyuOrsH6Skhnl629dQzi4gk\nCAVJM8ppl8qEs7rxv+9s03dKRCRpKEia2ReKCthfqe+UiEjyUJA0s/P65VLQOZOninV4S0SSg4Kk\nmYVCxudHFfBmyW627jkcdDsiIi1OQdICrhvVCzN4eplu5CgiiU9B0gJ6dszkU4V5PFO8lTo9p0RE\nEpyCpIV8saiAjyoqeaNkV9CtiIi0KAVJC7lsSFc6t09j9pIPg25FRKRFKUhaSHpKmOtH9WL+6p2U\nHdCNHEUkcTU4SMyswMxeMbPVZrbKzL7h653NbL6Zrfc/O/m6mdkDZlZiZivMbGTMuqb6+deb2dSY\n+igzW+mXecDM7HTHiAeTzy2gNuJ4ulgn3UUkcTVmj6QW+LZzbggwFrjdzIYAdwILnHOFwAL/GWAi\nUOhftwIPQTQUgLuBMcBo4O6jweDnuSVmuQm+3qgx4kW/vCzO65fLk0s+JKKT7iKSoBocJM657c65\n5f79AWAN0BOYBMzys80CrvHvJwGPuajFQEcz6w6MB+Y75/Y45/YC84EJfloH59xiF7197mPHrasx\nY8SNL43pTeneI7yuk+4ikqBO6xyJmfUBzgHeBvKdc9v9pB1Avn/fE4j9enepr52sXlpPndMY4/h+\nbzWzYjMrLi8vb9gv2UzGD+1Gbvs0nnh7S6uOKyLSWhodJGaWBfwZ+KZz7pj7pfs9iRY9hnM6Yzjn\npjvnipxzRXl5eS3UWf3SUkJcX9SLv68p09MTRSQhNSpIzCyVaIj80Tn3rC/vPHo4yf8s8/VtQEHM\n4r187WT1XvXUT2eMuDLl3N7URRx/Wqr7b4lI4mnMVVsGzADWOOd+FTNpLnD0yqupwJyY+o3+yqqx\nQIU/PDUPGGdmnfxJ9nHAPD9tv5mN9WPdeNy6GjNGXOnTpT2fKuzCk0s+pLYuEnQ7IiLNqjF7JBcA\nXwEuMbN3/esK4F7gcjNbD1zmPwM8D2wESoBHgNsAnHN7gHuApf71Y1/Dz/N7v8wG4AVfb9QY8egr\nY89ge0Ulf1+zM+hWRESalSXb88WLiopccXFxq49bF3FcdN8r9O7cjidvHdvq44uINIWZLXPOFdU3\nTd9sbyXhkHHD2N4s2rib9TsPBN2OiEizUZC0oi8WFZAWDvH4Yl0KLCKJQ0HSinKz0rlqWHeeXb6N\ng1W1QbcjItIsFCSt7CvnncHBqlqeXa77b4lIYlCQtLIRBR0Z1iuHWW9t1v23RCQhKEhamZnxtQv6\nsqH8EK+tb93btYiItAQFSQCuOLs7XbPTmfnm5qBbERFpMgVJANJSQtx43hm8tq5clwKLSJunIAnI\nlNG9SUsJ8Ye3NgfdiohIkyhIApKblc61I3ry7PJS9h6qDrodEZHTpiAJ0E0X9qGyJsITSz4MuhUR\nkdOmIAnQ4G4duHBAFx5btJnqWt0VWETaJgVJwG65qB8791cx5924e4yKiEiDKEgCdlFhFwZ3y+aR\n1zeSbHdiFpHEoCAJmJlxy6f6sW7nQV5dpy8oikjboyCJA1cP70G3DhlMX7gx6FZERBpNQRIH0lJC\n3HRBHxZt3M3K0oqg2xERaRQFSZyYMqY3Wekp/O61DUG3IiLSKAqSONEhI5Ubxvbm+ZXb2bzrUNDt\niIg0mIIkjtx8YV9SwiHtlYhIm6IgiSNdszP4YlEBzywrZUdFZdDtiIg0iIIkztx6UT8iDh55XVdw\niUjb0OAgMbOZZlZmZu/H1H5kZtvM7F3/uiJm2l1mVmJmH5jZ+Jj6BF8rMbM7Y+p9zextX/+TmaX5\nerr/XOKn9znVGG1ZQed2TBrRgyfe/pA9upmjiLQBjdkjeRSYUE/9fufcCP96HsDMhgCTgaF+mQfN\nLGxmYeC3wERgCDDFzwvwc7+uAcBe4GZfvxnY6+v3+/lOOEYjfp+4ddtn+lNZW8cf3twUdCsiIqfU\n4CBxzr0G7Gng7JOA2c65KufcJqAEGO1fJc65jc65amA2MMnMDLgEeMYvPwu4JmZds/z7Z4BL/fwn\nGqPNG9A1m/FDuvHoW5upOFITdDsiIifVHOdIppnZCn/oq5Ov9QS2xsxT6msnqucC+5xztcfVj1mX\nn17h5z/RuhLC1y8dwIHKWu2ViEjca2qQPAT0B0YA24FfNrmjFmBmt5pZsZkVl5e3jftZDe2Rw7gh\n+cx4Y5P2SkQkrjUpSJxzO51zdc65CPAInxxa2gYUxMzay9dOVN8NdDSzlOPqx6zLT8/x859oXfX1\nOd05V+ScK8rLyzudXzUQ/3ppofZKRCTuNSlIzKx7zMdrgaNXdM0FJvsrrvoChcASYClQ6K/QSiN6\nsnyui94//RXger/8VGBOzLqm+vfXAy/7+U80RsI4q2cOlw/JZ6b2SkQkjjXm8t8ngUXAIDMrNbOb\ngfvMbKWZrQAuBu4AcM6tAp4CVgMvArf7PZdaYBowD1gDPOXnBfg+8C0zKyF6DmSGr88Acn39W8Cd\nJxvjNLdD3PrGpYXsr6zl0Tc3B92KiEi9LNkeplRUVOSKi4uDbqNRbnmsmMUbd/PG9y4hp11q0O2I\nSBIys2XOuaL6pumb7W3AHZcN5EBlLdNf1z24RCT+KEjagCE9OnD18B7MfGMz5Qeqgm5HROQYCpI2\n4o7LCqmui/DgqyVBtyIicgwFSRvRLy+L60f24o+LP2TbviNBtyMi8jEFSRvyr5cVAvCbBesD7kRE\n5BMKkjakZ8dMbhjbm6eXlVJSdjDodkREAAVJmzPt4gFkpoa578W1QbciIgIoSNqc3Kx0/s9n+vPS\n6p0s3dzQmzGLiLQcBUkb9LUL+pLfIZ2fPr+GZPtCqYjEHwVJG5SZFubblw/inQ/38eL7O4JuR0SS\nnIKkjbpuVC8G5mfx8xfXUl0bCbodEUliCpI2Khwy7rriTDbvPsxjizYH3Y6IJDEFSRt28aCufHpg\nHr9esJ7dB3XrFBEJhoKkjfu/V57J4eo6fjV/XdCtiEiSUpC0cYX52Xxl7Bk8ueRD1u7YH3Q7IpKE\nFCQJ4JuXFZKdkco9f12ty4FFpNUpSBJAx3ZpfOvygbxZsluXA4tIq1OQJIgbxvRmcLds7vnrag5X\n1wbdjogkEQVJgkgJh7jnmrP4qKKS/35ZzywRkdajIEkg5/bpzHUje/HI6xt1d2ARaTUKkgRz58TB\nZKSG+dHcVTrxLiKtQkGSYPKy0/nOuEG8UbKLue99FHQ7IpIEFCQJ6Mtjz2BYrxzu+etq9h2uDrod\nEUlwDQ4SM5tpZmVm9n5MrbOZzTez9f5nJ183M3vAzErMbIWZjYxZZqqff72ZTY2pjzKzlX6ZB8zM\nTneMZBcOGT/73NnsPVzDz57XA7BEpGU1Zo/kUWDCcbU7gQXOuUJggf8MMBEo9K9bgYcgGgrA3cAY\nYDRw99Fg8PPcErPchNMZQ6KG9sjhnz7Vlz8Vb2XRht1BtyMiCazBQeKcew04/pF8k4BZ/v0s4JqY\n+mMuajHQ0cy6A+OB+c65Pc65vcB8YIKf1sE5t9hFzxA/dty6GjOGeN+8dCAFnTP54XMrqaypC7od\nEUlQTT1Hku+c2+7f7wDy/fuewNaY+Up97WT10nrqpzPGPzCzW82s2MyKy8vLG/irtX2ZaWF+eu3Z\nbNx1iAcWrA+6HRFJUM12st3vSbTo9aanO4Zzbrpzrsg5V5SXl9cCncWvTxXm8YWiXjy8cAPvbd0X\ndDsikoCaGiQ7jx5O8j/LfH0bUBAzXy9fO1m9Vz310xlDjvPDK4fQNTuD7z7zHlW1OsQlIs2rqUEy\nFzh65dVUYE5M/UZ/ZdVYoMIfnpoHjDOzTv4k+zhgnp+238zG+qu1bjxuXY0ZQ46Tk5nKz647m3U7\nD+oQl4g0u8Zc/vsksAgYZGalZnYzcC9wuZmtBy7znwGeBzYCJcAjwG0Azrk9wD3AUv/6sa/h5/m9\nX2YD8IKvN2oMqd/Fg7ry+VG9eHjhRh3iEpFmZcl2G42ioiJXXFwcdBuBqDhSw4T/eo3M1DB//dcL\naZeWEnRLItJGmNky51xRfdP0zfYkkpOZyi8/P5yNuw7x0+fXBN2OiCQIBUmSOX9AF/7pwr78z+IP\neWVt2akXEBE5BQVJEvrO+EEM7pbNd595j10Hq4JuR0TaOAVJEspIDfNfk0ew/0gt3336PSKR5DpP\nJiLNS0GSpAZ368APrzyTVz4oZ8Ybm4JuR0TaMAVJErvxvDMYPzSfn7+4lnd1SbCInCYFSRIzM+67\nbjj5HTL4+pPL2V9ZE3RLItIGKUiSXE67VB6Ycg4f7avku0+/p8fzikijKUiEUWd04q6Jg5m3aie/\ne21j0O2ISBujIBEAbr6wL1ee3Z37XlzLWyW7gm5HRNoQBYkA0fMlP79+GP3ysvj6k++wveJI0C2J\nSBuhIJGPZaWn8PCXR1FZU8c/P75MT1UUkQZRkMgxBnTN4v4vjmDltgq+98wKnXwXkVNSkMg/GDe0\nG98ZN4i5733Eg69uCLodEYlzuo+41Ou2z/Tngx0H+M+XPqCwaxbjhnYLuiURiVPaI5F6mRn3XT+M\nYT1z+Mbsd1lRqm++i0j9FCRyQhmpYR6ZWkRuVhpfe3QpW/ccDrolEYlDChI5qa7ZGTx607lU10b4\n6h+WsO9wddAtiUicUZDIKQ3oms0jNxaxdc8RbnmsmCPVuixYRD6hIJEGGdMvl199cTjFW/Zy+xPL\nqamLBN2SiMQJBYk02FXDevCTa87i5bVlfEcPxBIRT5f/SqPcMOYM9h2u4RfzPiAnM5V//+xQzCzo\ntkQkQAoSabTbPtOffYereeT1TaSGQ/zfK89UmIgksWY5tGVmm81spZm9a2bFvtbZzOab2Xr/s5Ov\nm5k9YGYlZrbCzEbGrGeqn3+9mU2NqY/y6y/xy9rJxpCWZWb84Ioz+er5fZjxxibufXGtbqUiksSa\n8xzJxc65Ec65Iv/5TmCBc64QWOA/A0wECv3rVuAhiIYCcDcwBhgN3B0TDA8Bt8QsN+EUY0gLMzPu\nvnoIXx7bm98t3Mgv5n2gMBFJUi15sn0SMMu/nwVcE1N/zEUtBjqaWXdgPDDfObfHObcXmA9M8NM6\nOOcWu+hfqseOW1d9Y0grMDN+/NmzmDK6Nw++uoGf/G2NwkQkCTXXORIHvGRmDvidc246kO+c2+6n\n7wDy/fuewNaYZUt97WT10nrqnGSMY5jZrUT3fujdu3ejfzk5sVDI+I9rziI9JcSMNzZxpKaOn0w6\ni1BI50xEkkVzBcmFzrltZtYVmG9ma2MnOuecD5kWc7IxfLBNBygqKtI/mZtZKBQ9zNUuLcyDr27g\nSHUd910/jNSwri4XSQbN8v9059w2/7MMeI7oOY6d/rAU/meZn30bUBCzeC9fO1m9Vz11TjKGtDIz\n43sTBvPd8YN47p1t3PJYMYera4NuS0RaQZODxMzam1n20ffAOOB9YC5w9MqrqcAc/34ucKO/emss\nUOEPT80DxplZJ3+SfRwwz0/bb2Zj/dVaNx63rvrGkIDcfvEA7v3c2by2rpwp0xez+2BV0C2JSAtr\njkNb+cBz/orcFOAJ59yLZrYUeMrMbga2AF/w8z8PXAGUAIeBmwCcc3vM7B5gqZ/vx865Pf79bcCj\nQCbwgn8B3HuCMSRAk0f3JjcrnWlPLOe6h95i5lfPpV9eVtBtiUgLsWS7yqaoqMgVFxcH3UZSWLZl\nD7c8toy6iOOhG0Zy/oAuQbckIqfJzJbFfL3jGDobKi1m1BmdmXP7BXTNTufGmUt44u0Pg25JRFqA\ngkRaVEHndvz5tvO5YEAXfvDcSn7w3EqqanUbepFEoiCRFtchI5UZU4v4l0/354m3P+SLv1vM9ooj\nQbclIs1EQSKtIiUc4s6Jg3nohpGs33mAqx54g4XryoNuS0SagYJEWtXEs7szZ9oF5GalMXXmEn72\nwho9JEukjVOQSKsb0DWbudMu5Etjojd8/PzDi9i861DQbYnIaVKQSCAyUsP89Nqz+e2XRrKx/CAT\nf/06jy/arKcuirRBChIJ1JXDujPvjos4t29n/m3OKm6cuYTSvYeDbktEGkFBIoHrnpPJrJvO5T+u\nPYvlH+7l8l+9xu9f30itzp2ItAkKEokLZsYNY85g/rc+zXn9c/nJ39Zw7YNvsaJ0X9CticgpKEgk\nrvTsmMmMqUX895fOYXtFJZN++ybff2YFu3TzR5G4pSCRuGNmXDWsB69859Pc8ql+/Hl5KRf/4lUe\nXriByhp9K14k3ihIJG5lZ6TygyvO5MVvXsSoPp2494W1XPKfr/J08VbqdHWXSNxQkEjcG9A1i0dv\nGs0Tt4yhS3Y6331mBePuX8icd7cpUETigIJE2ozz+3dhzu0X8OANI0kJhfjG7HcZd/9Cnl1eqm/H\niwRIzyORNikScby4agcPLFjP2h0H6J6Twdcu6Mvk0QVkZ6QG3Z5IwjnZ80gUJNKmOed4dV050xdu\nZNHG3bRPC3PtyJ7ceF4fBuZnB92eSMJQkMRQkCSuFaX7mPXWFv6y4iOqayOc26cTny8q4Mqzu9M+\nvTmeKi2SvBQkMRQkiW/PoWqeKt7Kn5ZuZdOuQ7RLCzPxrO58dkQPzu+fS2pYpwZFGktBEkNBkjyc\ncyzbspeni0t5fuV2DlTV0rl9GuOHdmP80HzO659Leko46DZF2gQFSQwFSXKqrKnjtXXlzH3vI15e\nW8bh6jqy0lO4aGAXPj0wj4sG5tE9JzPoNkXi1smCRAeOJSlkpIYZN7Qb44Z2o7KmjkUbdvPS6h28\nvLaM51fuAKCwaxZj++Uypl9nRvftTNfsjIC7FmkbEmKPxMwmAL8GwsDvnXP3nmhe7ZFILOcc63Ye\n5LV15bxesotlm/dwqDp6G5aCzpmcU9CJEQUdOatnDkN6dCBLJ+0lSSX0oS0zCwPrgMuBUmApMMU5\nt7q++RUkcjK1dRHe/2g/Szbt5t2t+1i+ZR879ld+PL1PbjsG5mczMD+bwvws+nZpT58u7emg765I\ngkv0Q1ujgRLn3EYAM5sNTALqDRKRk0kJhxhR0JERBR0/ru2oqGTVRxWs/mg/qz7az/qyAyxYW3bM\n7Vly26fRq1MmPTtl0iMnk245GXTtkEF+djq5Wenktk8jJzOVUMiC+LVOS13EUV0bobouQs3RV62j\nJhKhts5RG4lQF3HURRwR54g4cA4i/h+nRvQGnCGDUMhICRnhkJEWDpEaDpGWEiIjNUxGaoiMlHCb\n2jZyrEQIkp7A1pjPpcCYgHqRBNQtJ4NuORlcemb+x7Wq2jo27zrMpl2H2Lz7EFt2H6J07xHW7jjA\ngjVlVNX+4y1bwiEjJzOVDhkpdMhMJSs9hfbpKbRPC5OZlkK6/8OalhIiNWSkhEOkhg0zI2zRP8rm\n/9Ye/YNdF3E4B7URR10kQm3EUVvn/B9+R3VdHTW1juq6CNW1Eap8MFTV1Pmf/nNtHVU1frqfp7Xv\nY5aZGqZ9epj26Sl0yEilQ2b0Z8d2aXRun0rn9ul0yUojLzudrtnp5HfI0F0M4kQiBMkpmdmtwK0A\nvXv3DrgbSQTpKWEGdctmULd//Pa8c46KIzWUHahi5/5Kdh+sZvehavYcqqLiSA37j9RScaSGQ1W1\n7D18hMPVtRyurqOypu7jP+RNEfb/+j/6r/60cIjUlOieQFpKNKjSU0JkpaeQ2z5EekqY9BQ/r58W\nXS4cs1zo4z2JlHB03UfHCYWM0NE9DzMMorsjDiJHA885IhFHjd+TqfHBVlkTobKmjsPVdRypqeNg\nVS2Hqmo5UBndRjv3H2Tf4Rr2Hq6uN9iy0lPonpNBj46ZFHTOpHfndvTu3J5+ee3p3bkdGam6vLs1\nJEKQbAMKYj738rWPOeemA9Mheo6k9VqTZGRmdGyXRsd2aad1mxbn3Cd7FpEILoI/dHTsf7rhkH18\n6Cg1HCJkn/xhTzSRiGN/ZQ27DlZTdqCS8gNV7KioZHtFJdsrjlC69wjvfLiX/ZW1Hy9jBgWd2jEw\nP4vC/GwGd8tmSPcO9MvLIpyA2yhIiRAkS4FCM+tLNEAmA18KtiWR02dmpIaN1DBkon9RQ/Qcy9Fw\nHtA164TzVRyuYcueQ2zadYiN5YcoKTvIup0HePWDcmr9Hk1Gaogzu3dgeK/oubDhBR3pk9sOM4XL\n6WrzQeKcqzWzacA8opf/znTOrQq4LREJQE67VIa168iwXh2PqVfXRti46yCrtu1n9fb9rCyt4E9L\nt/LoW5sB6JKVRtEZnSnq04nz+3dhcLfshNyzaylt/vLfxtLlvyIC0Uu9S8oPsnzLPoo372Hplj1s\n3XMEgE7tUjmvfy4XFebx6UG66wEk+PdIGktBIiInsr3iCIs27OatDbt5s2QX2yui3yEalJ/NJWd2\n5fIh+Yzo1TEp91YUJDEUJCLSEM451pcdZOEH5bzyQRlLNu2hNuLIy05n/NB8rji7O2P65ibNiXsF\nSQwFiYicjorDNby6royXVu3k5bVlHKmpo0tWOlcN68415/RkeK+chD5hryCJoSARkaY6XF3LK2vL\n+dvKj/j7mjKqayP07dKe60b25PpRBXTLSbwbfipIYihIRKQ57a+s4YWV23l2+Tbe3rSHkMFnBnVl\nyujeXDK4a8Ic+lKQxFCQiEhL2bzrEE8Vb+WZZaWUHaiiZ8dMvjSmN5PPLSA3Kz3o9ppEQRJDQSIi\nLa2mLsLfV+/k8cVbeGvDbtJSQlw3sidfu6Avhadxt4N4oCCJoSARkdZUUnaAmW9u5s/LSqmqjXDx\noDxuu3gA5/bpHHRrjaIgiaEgEZEg7DlUzf8s3sKjb21mz6FqRvfpzO2XDOCiwi5t4movBUkMBYmI\nBOlIdR2zl37I9Nc2sr2iknN6d+SOywbyqTgPFAVJDAWJiMSD6toITy/bym9fLuGjikqKzujE9ycO\njttDXgqSGAoSEYknVbV1PFVcym8WrKfsQBWXndmV744fXO+zboKkIImhIBGReHSkuo6Zb27i4YUb\nOFRVy+TRvfnW5QPpEieXDStIYihIRCSe7T1UzQMvr+fxRVvITA1z+yUD+NoFfUlLCQXa18mCJNjO\nRETkGJ3ap3H31UOZd8dFjO7bmXtfWMuEX7/G6+vLg27thBQkIiJxqH9eFjO+ei5/uOlc6iKOr8xY\nwm1/XMYOf2v7eKIgERGJYxcP6sq8b17Ety8fyII1ZVz2q4U8vmgzkUj8nJZQkIiIxLmM1DBfv7SQ\nl+64iBEFHfm3Oau4/uG3KIzWlDUAAAaLSURBVCk7EHRrgIJERKTNOCO3PY/fPJpffWE4G3cd4ooH\n3uDhhRuoC3jvREEiItKGmBmfG9mL+Xd8mosH5XHvC2u57qG32FB+MLCeFCQiIm1QXnY6D395FL+Z\ncg6bdx/iygde5/FFmwniKx0KEhGRNsrMuHp4D+Z98yJG983l3+as4qZHl1J+oKpV+1CQiIi0cfkd\nMph107n8+2eHsmjDbib++vVW/d5Jk4LEzH5kZtvM7F3/uiJm2l1mVmJmH5jZ+Jj6BF8rMbM7Y+p9\nzextX/+TmaX5err/XOKn9znVGCIiycbMmHp+H+ZOu5DO7VP5yowl3PvCWmrqIi0+dnPskdzvnBvh\nX88DmNkQYDIwFJgAPGhmYTMLA78FJgJDgCl+XoCf+3UNAPYCN/v6zcBeX7/fz3fCMZrh9xERabMG\ndctmzu0XMmV0bx5euIEp0xe3+JcYW+rQ1iRgtnOuyjm3CSgBRvtXiXNuo3OuGpgNTLLoTfgvAZ7x\ny88CrolZ1yz//hngUj//icYQEUlqmWlhfva5s3lgyjms3r6fq37zOm+V7Gqx8ZojSKaZ2Qozm2lm\nnXytJ7A1Zp5SXztRPRfY55yrPa5+zLr89Ao//4nW9Q/M7FYzKzaz4vLy+L1fjYhIc/rs8B7MnXYB\nHdul8eUZbzPzjU0tMs4pg8TM/m5m79fzmgQ8BPQHRgDbgV+2SJdN5Jyb7pwrcs4V5eXlBd2OiEir\nGdA1mzm3X8Bnh/egb177Fhkj5VQzOOcua8iKzOwR4K/+4zagIGZyL1/jBPXdQEczS/F7HbHzH11X\nqZmlADl+/pONISIiXvv0FP5r8jkttv6mXrXVPebjtcD7/v1cYLK/4qovUAgsAZYChf4KrTSiJ8vn\nuug3aF4BrvfLTwXmxKxrqn9/PfCyn/9EY4iISCs65R7JKdxnZiMAB2wG/hnAObfKzJ4CVgO1wO3O\nuToAM5sGzAPCwEzn3Cq/ru8Ds83sJ8A7wAxfnwE8bmYlwB6i4XPSMUREpPXoCYkiInJKekKiiIi0\nGAWJiIg0iYJERESaREEiIiJNoiAREZEmSbqrtsysHNhymot3AVruhjVtj7bHsbQ9PqFtcaxE2B5n\nOOfqvTVI0gVJU5hZ8Ykuf0tG2h7H0vb4hLbFsRJ9e+jQloiINImCREREmkRB0jjTg24gzmh7HEvb\n4xPaFsdK6O2hcyQiItIk2iMREZEmUZCIiEiTKEgawMzu8Y8TftfMXjKzHr5uZvaAmZX46SOD7rU1\nmNkvzGyt/52fM7OOMdPu8tvjAzMbH2SfrcHMPm9mq8wsYmZFx01Lqm1xlJlN8L9ziZndGXQ/rc0/\ndrzMzN6PqXU2s/lmtt7/7HSydbQ1CpKG+YVzbphzbgTRp0D+P1+fSPSBWoXArUQfPZwM5gNnOeeG\nAeuAuwDMbAjR58UMBSYAD5pZOLAuW8f7wOeA12KLSbot8L/jb4n+f2MIMMVvi2TyKNH/zWPdCSxw\nzhUCC/znhKEgaQDn3P6Yj+2JPsgLYBLwmItaTPRxwd3/YQUJxjn3kn8kMsBioo85huj2mO2cq3LO\nbQJKgNFB9NhanHNrnHMf1DMp6baFNxoocc5tdM5VA7OJbouk4Zx7jehD+GJNAmb597OAa1q1qRam\nIGkgM/sPM9sK3MAneyQ9ga0xs5X6WjL5GvCCf6/t8Ylk3RbJ+nufSr5zbrt/vwPID7KZ5tbUR+0m\nDDP7O9Ctnkk/dM7Ncc79EPihmd0FTAPubtUGW9mptoef54dEH3P8x9bsrbU1ZFuINJRzzplZQn3v\nQkHiOecua+CsfwSeJxok24CCmGm9fK3NO9X2MLOvAlcBl7pPvoyUkNujEf9txErIbdEAyfp7n8pO\nM+vunNvuD3+XBd1Qc9KhrQYws8KYj5OAtf79XOBGf/XWWKAiZvc1YZnZBOB7wGedc4djJs0FJptZ\nupn1JXoRwpIgeowDybotlgKFZtbXzNKIXnAwN+Ce4sFcYKp/PxVIqD1Z7ZE0zL1mNgiIEL0F/b/4\n+vPAFURPpB4GbgqmvVb330A6MN/MABY75/7FObfKzJ4CVhM95HW7c64uwD5bnJldC/wGyAP+Zmbv\nOufGJ+O2AHDO1ZrZNGAeEAZmOudWBdxWqzKzJ4HPAF3MrJTo0Yt7gafM7Gaif0O+EFyHzU+3SBER\nkSbRoS0REWkSBYmIiDSJgkRERJpEQSIiIk2iIBERkSZRkIiISJMoSEREpEn+P1YnjeHSw5ylAAAA\nAElFTkSuQmCC\n",
-            "text/plain": [
-              "<Figure size 432x288 with 1 Axes>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
       ]
     },
     {
@@ -146,7 +96,15 @@
         "\n",
         "a) $f(x) = sin^2(2x+1)$\n",
         "\n",
-        "b) $f(x) = ln(x^3+2sin(x))$ (выражение второй производной упрощать не нужно)"
+        "$2 cos (2x+1) * 2$\n",
+        "\n",
+        "$4 sin (2x+1) *2$\n",
+        "\n",
+        "b) $f(x) = ln(x^3+2sin(x))$ (выражение второй производной упрощать не нужно)\n",
+        "\n",
+        "$ 1 / (x^3 + 2 sin(x)) * (3x^2 + 2 cos(x))$\n",
+        "\n",
+        "$- 1 / (x^3 + 2 sin(x))^2 * (3x^2 + 2 cos(x)) * (3x^2 + 2cos(x)) + 1 / (x^3 + 2 sin(x)) * (6x +2 sin(x)))$\n"
       ]
     },
     {
@@ -170,6 +128,26 @@
         "\n",
         "$f(x) = x^5+4sin(2x)+cos(3x+3)$ в точке $x=1$\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RiQQdhcfnvAj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "import pylab\n",
+        "\n",
+        "from scipy.misc import derivative\n",
+        "from scipy.misc import electrocardiogram\n",
+        "from scipy.optimize import fmin, brute\n",
+        "from scipy.signal import find_peaks"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
