--- a/mds FinalTest.ipynb
+++ b/mds FinalTest.ipynb
@@ -47,6 +47,21 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OMbvAIfkrb57",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "from matplotlib import pyplot as plt\n",
+        "import math\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "pK3uCg9dBe4l",
@@ -89,6 +104,58 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N_gAax5FqxZo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        },
+        "outputId": "ec19f6da-087b-4956-f3c9-b6379a01f51b"
+      },
+      "source": [
+        "#Скалярное произведение векторов, нормированное\n",
+        "#np.dot(x,y)/math.sqrt(np.dot(x,x)*np.dot(y,y))\n",
+        "# нужно найти максимум по списку\n",
+        "sp = [(i,raitings[i]) for i in range(len(raitings))]\n",
+        "\n",
+        "def scal(x,y):\n",
+        "  if x == y: # чтобы вектор сам на себя не оставался в выборке\n",
+        "    return 0\n",
+        "  return np.dot(x,y)/math.sqrt(np.dot(x,x)*np.dot(y,y))\n",
+        "# нужно составить пары значений и взять от них максимум по каждой группе пар\n",
+        "def max_sp(n):\n",
+        "  return max(sp, key=lambda p: scal(p[1],sp[n][1]))\n",
+        "\n",
+        "[(i[0] , max_sp(i[0])[0]) for i in sp]\n"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(0, 8),\n",
+              " (1, 4),\n",
+              " (2, 9),\n",
+              " (3, 9),\n",
+              " (4, 8),\n",
+              " (5, 9),\n",
+              " (6, 3),\n",
+              " (7, 5),\n",
+              " (8, 0),\n",
+              " (9, 2)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "IfrxIem3Be4p",
@@ -96,6 +163,55 @@
       },
       "source": [
         "<b> b) </b>Предположим, вы захотели сжать признаковые описания пользователя с 15 фильмов, до, скажем, 5-ти признаков, как вы это сделаете?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jTFDi9U2x9lm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 218
+        },
+        "outputId": "e236181a-46c2-42aa-81c7-af9cde879f53"
+      },
+      "source": [
+        "#метод svd спектральное разложение матрицы\n",
+        "from sklearn.decomposition import TruncatedSVD\n",
+        "\n",
+        "def TruncClassifier(X, n_components=5):\n",
+        "  svd = TruncatedSVD(n_components = n_components)\n",
+        "  X_reduced = svd.fit_transform(X)\n",
+        "  return X_reduced, svd \n",
+        "\n",
+        "TruncClassifier(raitings, n_components=5)  "
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[23.41982063, -5.36092136,  3.83196779, -4.06950174,  1.10267269],\n",
+              "        [24.76774917,  4.52188701,  1.35815965,  1.58128545,  8.59912002],\n",
+              "        [22.27728589, -6.96492049, -4.84461485, -0.47661647,  3.37152266],\n",
+              "        [19.4257757 ,  2.64575227, -6.86014009, -4.76604765,  1.96075707],\n",
+              "        [22.8146354 ,  0.51464093,  7.70180188,  4.42379773,  1.29124163],\n",
+              "        [21.76961656,  1.94294987, -4.56934779,  8.32306487, -2.21887359],\n",
+              "        [21.23427453,  9.78047778,  1.16340271, -4.86074521, -2.60815471],\n",
+              "        [19.97476815,  4.00048677, -1.67456316,  1.1512346 , -3.5637169 ],\n",
+              "        [26.39306998, -3.03090482,  5.86422753, -1.67503491, -3.71500141],\n",
+              "        [29.94016844, -4.82012297, -3.48912415,  0.05527083, -3.62526487]]),\n",
+              " TruncatedSVD(algorithm='randomized', n_components=5, n_iter=5,\n",
+              "              random_state=None, tol=0.0))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
       ]
     },
     {
