--- a/aml6 dz 1.ipynb
+++ b/aml6 dz 1.ipynb
@@ -1152,6 +1152,32 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3wZE40E_idl9",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Сделаем нормализацию данных, это позволит в 2 раза увеличить точность модели"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I6UH9H6VgMqf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.preprocessing import StandardScaler \n",
+        "scale_features_std = StandardScaler() \n",
+        "features_train = scale_features_std.fit_transform(X_train) \n",
+        "features_test = scale_features_std.transform(X_test) "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "jGJCfC7iQv7b",
@@ -1159,7 +1185,7 @@
         "colab": {}
       },
       "source": [
-        "model = LogisticRegression(C = 10.0) #тут надо играть с C"
+        "model = LogisticRegression(C = 1.0, solver='lbfgs') #тут надо играть с C"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1169,36 +1195,23 @@
       "metadata": {
         "id": "zaPT19s5Qv7d",
         "colab_type": "code",
-        "outputId": "c6fc0920-82cb-4695-b6a0-4345f4ce3667",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        }
+        "colab": {}
       },
       "source": [
         "# обучаем модель\n",
         "\n",
-        "model.fit(X_train, y_train)\n",
-        "y_pred = model.predict(X_test) ## но есть еще и predict_proba, уже знакомая вам по деревьям"
+        "model.fit(features_train, y_train)\n",
+        "y_pred = model.predict(features_test) ## но есть еще и predict_proba, уже знакомая вам по деревьям"
       ],
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ErzH8orjQv7f",
         "colab_type": "code",
-        "outputId": "45841fca-0f9a-4e95-87a7-f7a2823c2967",
+        "outputId": "81a29e30-485e-4af5-a993-7c5f6e34de86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
@@ -1208,19 +1221,19 @@
         "from sklearn.metrics import classification_report\n",
         "print (classification_report(y_test, y_pred))"
       ],
-      "execution_count": 59,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.81      0.97      0.88      5874\n",
-            "           1       0.70      0.25      0.37      1819\n",
+            "           0       0.88      0.94      0.91      5874\n",
+            "           1       0.75      0.60      0.67      1819\n",
             "\n",
-            "    accuracy                           0.80      7693\n",
-            "   macro avg       0.76      0.61      0.63      7693\n",
-            "weighted avg       0.78      0.80      0.76      7693\n",
+            "    accuracy                           0.86      7693\n",
+            "   macro avg       0.82      0.77      0.79      7693\n",
+            "weighted avg       0.85      0.86      0.85      7693\n",
             "\n"
           ],
           "name": "stdout"
@@ -1245,7 +1258,7 @@
         "colab": {}
       },
       "source": [
-        "y_pred_proba = model.predict_proba(X_test).tolist()"
+        "y_pred_proba = model.predict_proba(features_test).tolist()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1255,7 +1268,7 @@
       "metadata": {
         "id": "k3sWzYbUQv7o",
         "colab_type": "code",
-        "outputId": "7e3df4ee-a356-4341-94cc-eab9103e4be5",
+        "outputId": "efe520ad-a40b-4d39-fff3-572434320970",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1264,19 +1277,19 @@
       "source": [
         "y_pred_proba[0]"
       ],
-      "execution_count": 61,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.8344348640220831, 0.16556513597791686]"
+              "[0.7746826011362539, 0.22531739886374613]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 61
+          "execution_count": 91
         }
       ]
     },
@@ -1285,34 +1298,44 @@
       "metadata": {
         "id": "ofM6kjkEQv7q",
         "colab_type": "code",
-        "outputId": "160cc612-7dec-4d45-e9db-d332deb70ed3",
+        "outputId": "d8678e18-33ea-4a20-e364-faaa1d2d57d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
         }
       },
       "source": [
-        "threshold = 0.4 ## играйте с threshold\n",
+        "threshold = 0.41 ## играйте с threshold\n",
         "y_pred_2 = [1 if y[1] > threshold else 0 for y in y_pred_proba]\n",
         "print (classification_report(y_test, y_pred_2))"
       ],
-      "execution_count": 69,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.81      0.95      0.87      5874\n",
-            "           1       0.63      0.30      0.40      1819\n",
+            "           0       0.90      0.91      0.91      5874\n",
+            "           1       0.70      0.68      0.69      1819\n",
             "\n",
-            "    accuracy                           0.79      7693\n",
-            "   macro avg       0.72      0.62      0.64      7693\n",
-            "weighted avg       0.77      0.79      0.76      7693\n",
+            "    accuracy                           0.86      7693\n",
+            "   macro avg       0.80      0.79      0.80      7693\n",
+            "weighted avg       0.85      0.86      0.85      7693\n",
             "\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sFhgMHx5iImS",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### C 90% точностью можно предсказать \"бедность\" и 70% точностью \"богатство\""
       ]
     }
   ]
